[gd_scene load_steps=2 format=3 uid="uid://cgl7ch46tjgrw"]

[ext_resource type="Script" path="res://pausemenu/Settings.gd" id="1_e8hlo"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8hlo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = -103.0
offset_top = -50.0
offset_right = 62.0
offset_bottom = 8.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window Mode"

[node name="WindowMode" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Disable aiming arc"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Back"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/WindowMode" to="." method="_on_window_mode_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Back" to="." method="_on_back_pressed"]
